--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -169,18 +169,18 @@ jobs:
               "password": "${{ secrets.GHUB_ACCESS_TOKEN }}"
           }]
            
-    - name: Install GPG Code Signing Key
-      if: github.ref == 'refs/heads/main'
-      run: |
-        cat <(echo -e "${{ secrets.GPG_PRIVATE_KEY }}") | gpg --batch --import
-        gpg --list-secret-keys --keyid-format LONG
+#    - name: Install GPG Code Signing Key
+#      if: github.ref == 'refs/heads/main'
+#      run: |
+#        cat <(echo -e "${{ secrets.GPG_PRIVATE_KEY }}") | gpg --batch --import
+#        gpg --list-secret-keys --keyid-format LONG
 
-    - name: Deploy Maven Artifacts
-      run: mvn -B --no-transfer-progress -pl !sapl-demo-vaadin,!sapl-demo-ethereum,!sapl-demo-axon,!sapl-demo-mqtt-pep -Ppublish -DskipTests clean package deploy
-      env:
-        MAVEN_USERNAME: ${{ secrets.NEXUS_USERNAME }}
-        MAVEN_CENTRAL_TOKEN: ${{ secrets.NEXUS_PASSWORD }}
-        MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}   
+#    - name: Deploy Maven Artifacts
+#      run: mvn -B --no-transfer-progress -pl !sapl-demo-vaadin,!sapl-demo-ethereum,!sapl-demo-axon,!sapl-demo-mqtt-pep -Ppublish -DskipTests clean package deploy
+#      env:
+#        MAVEN_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+#        MAVEN_CENTRAL_TOKEN: ${{ secrets.NEXUS_PASSWORD }}
+#        MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}   
 
     - name: Delete Workflow Runs
       if: github.ref == 'refs/heads/main'
